--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="disply-table">
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
                     <h4>Ahmed Eissa</h4>
-                    <h1>Ui &<br /> Ux Designer</h1> </div>
+                    <h1>Ui <br /> Ux Designer</h1> </div>
             </div>
         </div>
     </div>
@@ -106,7 +106,7 @@
                             <p class="timeline-event-thumbnail">November 2014 - Mars 2016</p>
                             <h3>Freelancer</h3>
                             <h4>Designer und Autor</h4>
-                            <p>Konzeption, Design und Produktion von Digitalen Magazinen mit InDesign, der Adobe Digital Publishing Suite und HTML5. Co-Autorin der Fachbücher "Digitales Publizieren für Tablets" und "Adobe Digital Publishing Suite" erschienen im dpunkt.verlag.</p>
+                            <p>Konzeption, Design und Produktion von Digitalen Magazinen mit InDesign, der Adobe Digital Publishing Suite und HTML5. Co-Autorin der Fachbücher "Digitales Publizieren für Tablets" und "Adobe Digital Publishing Suite" erschienen im dpunkt.verlag.</p>
                         </div>
                     </li>
                     <li class="timeline-event" data-aos="fade-up" data-aos-delay=".4">
@@ -116,7 +116,7 @@
                             <h3>konplan gmbh</h3>
                             <h4>IT-Consultant</h4>
                             <p><strong>Systemarchitektur, Consulting</strong>
-                                <br>Konzeption und Modellierung von Systemen und APIs für Digital Publishing und Entitlement nach SOA</p>
+                                <br>Konzeption und Modellierung von Systemen und APIs für Digital Publishing und Entitlement nach SOA</p>
                         </div>
                     </li>
                 </ul>
